fixed up text-alignment on home page and album

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,6 +90,7 @@ body {
 .column-content {
     margin-left:20%;
     margin-right: 20%;
+    text-align: center;
 }
 
 /*--------------------band member---*/
@@ -113,6 +114,10 @@ body {
      display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+.album-paragraph {
+    text-align: center;
 }
 
 /*-----------------map----*/
